--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "postexport": "node generateSiteMap.js",
-    "deploy": "npm run build && npm run export && aws s3 sync ./out s3://cmartin.co/ && npm run invalidate-cloudfront",
-    "invalidate-cloudfront": "aws cloudfront create-invalidation --distribution-id E1L13TVF7G7NI0 --paths '/*'"
+    "postexport": "node generateSiteMap.js"
   },
   "author": "Chris Martin",
   "license": "ISC",
