use updated site

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "chrdevmar.github.io",
-  "version": "1.0.0",
-  "description": "Personal website for chris martin",
-  "main": "index.js",
+  "name": "chrdevmar",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "postexport": "node generateSiteMap.js"
+    "lint": "next lint"
   },
-  "author": "Chris Martin",
-  "license": "ISC",
   "dependencies": {
-    "next": "^8.1.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
-  },
-  "devDependencies": {
-    "serve": "^11.0.2"
+    "@svgr/webpack": "^7.0.0",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.37",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "next": "13.3.0",
+    "postcss": "8.4.22",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4"
   }
 }
